Fix: z-index관련 css수정 및 CardItem css수정

--- a/src/styles/avatar.custom.css
+++ b/src/styles/avatar.custom.css
@@ -1,6 +1,3 @@
-/* .css-17o22dy-MuiAvatar-root {
-  z-index: 10;
-} */
 .MuiAvatar-colorDefault {
   z-index: 100;
 }
